--- a/NovaStart-admin/src/main/resources/application.yaml
+++ b/NovaStart-admin/src/main/resources/application.yaml
@@ -1,17 +1,14 @@
 server:
-  # ???
   port: 8088
 
 spring:
   profiles:
     active: dev
   jackson:
-    # ???????????? null, ????
-    #    default-property-inclusion: non_null
+    default-property-inclusion: non_null
     date-format: yyyy-MM-dd HH:mm:ss
   servlet:
     multipart:
-      # ????????
       max-file-size: 10MB
 
 jwt:
