--- a/NovaStart-infrastructure/pom.xml
+++ b/NovaStart-infrastructure/pom.xml
@@ -36,6 +36,12 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
+
+    <!-- knife4j -->
+    <dependency>
+      <groupId>com.github.xiaoymin</groupId>
+      <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
