--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
     <lombok.version>1.18.28</lombok.version>
     <guava.version>31.1-jre</guava.version>
     <commons-lang3.version>3.12.0</commons-lang3.version>
-    <jackson.version>2.15.2</jackson.version>
     <knife4j.version>4.3.0</knife4j.version>
     <mybatis-plus.version>3.5.2</mybatis-plus.version>
     <p6spy.version>3.9.1</p6spy.version>
     <jjwt.version>0.11.2</jjwt.version>
+    <pool2.version>2.9.0</pool2.version>
   </properties>
 
   <!-- 统一依赖管理 -->
@@ -67,12 +67,7 @@
         <artifactId>commons-lang3</artifactId>
         <version>${commons-lang3.version}</version>
       </dependency>
-      <!-- Jackson -->
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
+
       <!-- knife4j（API 文档工具） -->
       <dependency>
         <groupId>com.github.xiaoymin</groupId>
@@ -93,7 +88,6 @@
         <version>${p6spy.version}</version>
       </dependency>
 
-
       <!--   JWT   -->
       <dependency>
         <groupId>io.jsonwebtoken</groupId>
@@ -111,6 +105,11 @@
         <version>${jjwt.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-pool2</artifactId>
+        <version>${pool2.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -121,6 +120,7 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>2.6.3</version>
           <configuration>
             <excludes>
               <exclude>
