feat: add spring security

--- a/NovaStart-admin/src/main/resources/application.yaml
+++ b/NovaStart-admin/src/main/resources/application.yaml
@@ -14,12 +14,10 @@ jwt:
   tokenHeaderKey: Authorization
   tokenPrefix: Bearer
 
-
-#=================================================================
-# minio
-#=================================================================
-minio:
-  endpoint: https://img.xxx.com
-  accessKey: xxx
-  secretKey: xxx
-  bucketName: xxx
+mybatis-plus:
+  global-config:
+    db-config:
+      id-type: auto
+      logic-delete-field: delFlag
+      logic-not-delete-value: 0
+      logic-delete-value: 1
