--- a/NovaStart-blog/src/main/resources/application.yaml
+++ b/NovaStart-blog/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 9001
 spring:
   profiles:
     active: dev
@@ -14,12 +14,10 @@ jwt:
   tokenHeaderKey: Authorization
   tokenPrefix: Bearer
 
-
-#=================================================================
-# minio
-#=================================================================
-minio:
-  endpoint: https://img.xxx.com
-  accessKey: xxx
-  secretKey: xxx
-  bucketName: xxx
+mybatis-plus:
+  global-config:
+    db-config:
+      id-type: auto
+      logic-delete-field: delFlag
+      logic-not-delete-value: 0
+      logic-delete-value: 1
